--- a/yiqing/templates/谣言.html
+++ b/yiqing/templates/谣言.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 </html>
 <!DOCTYPE html>
 <html lang="en">
@@ -112,8 +112,7 @@
         <a href="javascript:;" id="next" onclick="next_page(p);">下一页</a>
     </div>
   </body>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/谣言.js"> 
+  <script src="{%static 'js/jquery.min.js'%}"></script>
+  <script src="{%static 'js/谣言.js'%}"></script>
     
-  </script>
 </html>
