--- a/yiqing/static/css/index.css
+++ b/yiqing/static/css/index.css
@@ -15,7 +15,6 @@ body{
     width:1200px;
     margin:0 auto;
     position:relative;
-    height:1800px;
     background-color: #fff;
 }
 .nav{
@@ -91,6 +90,10 @@ body{
     color: orange;
 
 }
+
 .content{
     width: 100%;
+    height: 1000px;
+    position: absolute;
+    background-color: #fff;
 }
