--- a/yiqing/templates/index.html
+++ b/yiqing/templates/index.html
@@ -134,7 +134,7 @@
                     </div>
                     
                 </div>
-                <div  style="clear:both;width:1200px;background-color:white;padding:80px 0">
+                <div  style="clear:both;width:1200px;background-color:white;padding:80px 0;border-bottom: 1px #edeef0 solid;border-top: 1px #edeef0 solid;">
                     <div id="map"></div>
                 </div>
             </div>   
