--- a/yiqing/templates/index.html
+++ b/yiqing/templates/index.html
@@ -36,7 +36,7 @@
             <a href="#map">疫情地图</a>
             <a href="javascript:;">接种情况</a>
             <a href="javascript:;">谣言辟谣</a>
-            
+            <a href="javascript:;">抗疫英雄</a>
         </ul>
     </div>
     <div class="center">
@@ -150,7 +150,30 @@
             </div>   
             <div class="content" style="display: none" data-index="4">
         
-            </div>    
+            </div>
+            <div class="content" style="display: none" data-index="5">
+                <div class="heros">
+                    {% for hero in heros %}
+                    <div class="hero">
+                        <div class="heroinfo">
+                            <!-- <p>{{hero.姓名}}</p> -->
+                            <div class="herodata">
+                                <span><strong><i>简介</i></strong> </span>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;{{hero.简介}}</p>
+                                <span><strong><i>人物事迹</i></strong></span>
+                                <p>{{hero.事迹|linebreaksbr}}</p>
+                            </div>
+                            
+                            <div class="heroimg">
+                                <img src="{{hero.图片url}}" alt="">
+                                <div style="width:100%;height:5%;text-align:center">{{hero.姓名}}</div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                  {% endfor %}
+                </div> 
+            </div>     
         </div>
         
         <script src="{%static 'js/jquery.min.js'%}"></script>
