--- a/yiqing/templates/index.html
+++ b/yiqing/templates/index.html
@@ -32,7 +32,7 @@
     <div class="nav">
         <ul id="nav-list">
             <a href="#">首页</a>
-            <a href="javascript:;">新闻报道</a>
+            <a href="news" target="_blank">新闻报道</a>
             <a href="#map">疫情地图</a>
             <a href="javascript:;">接种情况</a>
             <a href="javascript:;">谣言辟谣</a>
@@ -139,8 +139,8 @@
                 </div>
             </div>   
             
-            <div class="content" style="display: none" data-index="1">
-                <!-- <iframe src="news" frameborder="0" height="100%" width="100%"></iframe> -->
+            <div class="content" style="display: none" data-index="1" height="900">
+                
             </div>
             <div class="content" style="display: none" data-index="2">
                
