--- a/yiqing/templates/news.html
+++ b/yiqing/templates/news.html
@@ -1,20 +1,28 @@
 {% load static %}
-</html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <link rel="stylesheet" href="{%static 'css/index.css'%}">
+    
+    <title>新闻报道</title>
     <style>
       * {
         margin: 0;
         padding: 0;
       }
+      html{
+        width:100%
+      }
+      body{
+        width:100%
+      }
       a{color:black;text-decoration:none;}
       a:hover{
-          color:skyblue;
+          color:orange;
       }
       #button {
         width: 50px;
@@ -48,6 +56,7 @@
         position: relative;
       }
       #ll img {
+
         position: absolute;
         bottom: 16px;
       }
@@ -59,29 +68,32 @@
         color: red;
       }
       .news{
-          width: 600px;
+          width: 100%;
       }
-      .title{
-          width:70%;
+      .new td.date{
+          width:200px;
+          font-size: 15px;;
       }
-      .date{
-        width:30%;
-      }
+      
       .new td{
           height: 35px;
-          line-height:35px
+          line-height:35px;
+          border-bottom: 1px #edeef0 dashed;
+
       }
       .new td{
           font-size: 18px;
       }
       #page{
           
-          height:25px;
+          height:30px;
+          width:340px;
+          margin:0 auto
       }
       #page>a{
         background-color:#f7f6f3;
-        width:60px;
-        height:100%;
+        
+        height:25px;
         display:inline-block;
         text-align: center;
         line-height:25px;
@@ -89,33 +101,84 @@
       }
       #page>a:hover{
           text-decoration: underline;
-
+          color:black
+          
       }
+      .jump{
+        display:inline-block;
+        width:25px
+      }
+
     </style>
   </head>
   <body>
-    <table class="news">
+    <div class="nav">
+      <ul id="nav-list">
+          <a href="/" target="_blank">首页</a>
+          <a href="#">新闻报道</a>
+          <a href="/#map" target="_blank">疫情地图</a>
+          <a href="javascript:;">接种情况</a>
+          <a href="javascript:;">谣言辟谣</a>
+          <a href="#">抗疫英雄</a>
+      </ul>
+  </div>
+    <div class="center" style="padding:0 20px;padding-top:70px;box-sizing: border-box;">
+      <table class="news">
         <tbody>
-            <!-- <tr class="new">
-                <td><a href="javascript:;" class="title">title</a></td>
-                <td class="date">date</td>
-            </tr>
+            
+            {% for i in news  %}
             <tr class="new">
-                <td><a href="javascript:;" class="title">title</a></td>
-                <td class="date">date</td>
-            </tr>
-            <tr class="new">
-                <td><a href="javascript:;" class="title">title</a></td>
-                <td class="date">date</td>
-            </tr> -->
+              <td><a href="{{i.sourceUrl}}" class="title">{{i.title}}</a></td>
+              <td class="date">{{i.pubDate}}</td>
+              
+          </tr>
+            {% endfor %}
         </tbody>
         
     </table>
-    <div id="page" style="display: none;">
-        <a href="javascript:;" style="margin-right:50px" onclick="pre_page(p);" id="pre">上一页</a>
-        <a href="javascript:;" id="next" onclick="next_page(p);">下一页</a>
+    <div id="page">
+        <a href="?page={{page|add:-1}}" style="margin-right:25px" id="pre" >&nbsp;上一页&nbsp;</a>
+        {% if page == 1  %}
+        <a href="#" id="this" class="jump">1</a>
+        <a href="?page=2"  class="jump">2</a>
+        <a href="?page=3"  class="jump">3</a>
+        <a href="?page=4"  class="jump">4</a>
+        <a href="?page=5"  style="margin-right:25px" class="jump">5</a>
+        {% elif page == 2 %}
+        <a href="?page=1"  class="jump">1</a>
+        <a href="#" id="this" class="jump">2</a>
+        <a href="?page=3"  class="jump">3</a>
+        <a href="?page=4"  class="jump">4</a>
+        <a href="?page=5"  style="margin-right:25px" class="jump">5</a>
+        {% else %}
+        <a href="?page={{page|add:-2}}"  class="jump">{{page|add:-2}}</a>
+        <a href="?page={{page|add:-1}}"  class="jump">{{page|add:-1}}</a>
+        <a href="#" id="this" class="jump">{{page}}</a>
+        <a href="?page={{page|add:1}}"  class="jump">{{page|add:1}}</a>
+        <a href="?page={{page|add:2}}"  style="margin-right:25px" class="jump">{{page|add:2}}</a>
+        {% endif %}
+        
+        <a href="?page={{page|add:1}}" id="next" >&nbsp;下一页&nbsp;</a>
     </div>
+    </div>
+    
   </body>
-  <script src="{%static 'js/jquery.min.js'%}"></script>
-  <script src="{%static 'js/news.js'%}"></script>
+  <script>
+    var pre=document.querySelector('#pre')
+    var page='{{page}}'
+    pre.onmouseover=function(){
+      if(page=='1'){
+        // this.style.cursor='no-drop';
+        this.style.pointerEvents='none'
+      }
+    }
+    pre.onmouseout=function(){
+      if(page!='1'){
+        this.style.cursor='pointer';
+        
+      }
+    }
+    var thisa=document.querySelector('#this')
+    thisa.style.backgroundColor='orange'  
+  </script>
 </html>
