--- a/yiqing/static/css/index.css
+++ b/yiqing/static/css/index.css
@@ -100,7 +100,7 @@ body{
     padding: 0px 20px;
     position: absolute;
     background-color: #fff;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 }
 .knowledges{
     box-sizing: border-box;
