--- a/yiqing/templates/news.html
+++ b/yiqing/templates/news.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <link rel="stylesheet" href="{%static 'css/index.css'%}">
+    <link rel="stylesheet" href="{%static 'css/index.css' %}">
     
     <title>新闻报道</title>
     <style>
@@ -88,7 +88,7 @@
           
           height:30px;
           width:340px;
-          margin:0 auto
+          margin: 50px auto;
       }
       #page>a{
         background-color:#f7f6f3;
