--- a/yiqing/static/css/index.css
+++ b/yiqing/static/css/index.css
@@ -228,10 +228,63 @@ body{
     height: 350px;
     display: inline-block;
     right: 20px;
-    
+    top:25px
 }
 .heroimg>img{
     width: 100%;
     height: 95%;
     border-radius: 5px;
+}
+.Vaccinehead{
+    width: 100%;
+    height: 45px;
+    margin-top: 25px;
+}
+.Vaccinehead>ul{
+    width: 100%;
+    height: 45px;
+    
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #fff;
+    
+}
+.Vaccinehead>ul>li{
+    list-style: none;
+    float: left;
+    width: 19%;
+    margin-right: 1%;
+    font-size: 20px;
+    line-height: 45px;
+    background-color: #eef5ff;
+    color: #2869ef;
+    text-align: center;
+}
+.Vsituation{
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+.Vsituation>div{
+    list-style: none;
+    display: inline-block;
+    width: 20%;
+    
+    font-size: 20px;
+    line-height: 45px;
+    height: 100%;
+    text-align: center;
+    align-self: center;
+}
+/* .Vsituation>div:nth-of-type(odd){
+    list-style: none;
+    float: left;
+    width: 19%;
+    margin-right: 1%;
+    font-size: 20px;
+    line-height: 45px;
+    text-align: center;
+} */
+.Vaccinebody>div:nth-of-type(even){
+    background-color: #f6faff;
 }
