--- a/yiqing/templates/index.html
+++ b/yiqing/templates/index.html
@@ -36,7 +36,7 @@
             <a href="news" >新闻报道</a>
             <a href="#map">疫情地图</a>
             <a href="javascript:;">接种情况</a>
-            <a href="javascript:;">谣言辟谣</a>
+            <a href="rumors">谣言辟谣</a>
             <a href="#">抗疫英雄</a>
         </ul>
     </div>
