--- a/yiqing/templates/news.html
+++ b/yiqing/templates/news.html
@@ -114,13 +114,13 @@
   <body>
     <div class="nav">
       <ul id="nav-list">
-          <a href="/" target="_blank">首页</a>
-          <a href="#" style="color:orange;background-color:#edeef0">新闻报道</a>
-          <a href="/#map" target="_blank">疫情地图</a>
-          <a href="javascript:;">接种情况</a>
-          <a href="javascript:;">谣言辟谣</a>
-          <a href="/" target="_blank">抗疫英雄</a>
-      </ul>
+        <a href="/" >首页</a>
+        <a href="#" style="color:orange;background-color:#edeef0">新闻报道</a>
+        <a href="/#map" >疫情地图</a>
+        <a href="/">接种情况</a>
+        <a href="/rumors">谣言辟谣</a>
+        <a href="/" >抗疫英雄</a>
+    </ul>
   </div>
     <div class="center" style="padding:0 20px;padding-top:70px;box-sizing: border-box;">
       <table class="news">
