--- a/yiqing/templates/rumors.html
+++ b/yiqing/templates/rumors.html
@@ -115,11 +115,11 @@
     <div class="nav">
       <ul id="nav-list">
         <a href="/" >首页</a>
-        <a href="/news">新闻报道</a>
-        <a href="/#map" >疫情地图</a>
-        <a href="/">接种情况</a>
-        <a href="#" style="color:orange;background-color:#edeef0">谣言辟谣</a>
-        <a href="/" >抗疫英雄</a>
+        <a href="/news" style="color:orange;background-color:#edeef0">新闻报道</a>
+        <a href="/#map?nav=map" >疫情地图</a>
+        <a href="/?nav=Vaccine">接种情况</a>
+        <a href="#">谣言辟谣</a>
+        <a href="/?nav=hero" >抗疫英雄</a>
     </ul>
   </div>
     <div class="center" style="padding:0 20px;padding-top:70px;box-sizing: border-box;">
